# forwarder-bot

./: Dockerfile  pyproject.toml  run.py
.github/workflows/: main.yml
dev/: DEV_README.md  todo.md
dev/unsorted/aiogram-middleware/: aiogram_middleware.py  sample.env
forwarder_bot/: app.py  bot.py  handler.py  lib.py
tests/: test_imports.py
